--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "nodemailer": "^6.10.0",
     "pg": "^8.13.0",
     "sequelize": "^6.37.5",
     "stack": "^0.1.0",
